--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -447,8 +447,8 @@ $(document).ready(function(){
 
             </div>
 
-        Original average: {{ assignmentAveragesContainerArray[$index].originalAverage }}
-        Current average: {{ assignmentAveragesContainerArray[$index].currentAverage }}
+        Original average: {{ originalAverageForGraphView }}
+        Current average: {{ currentAverageForGraphView }}
 
 
     </section>
