--- a/src/main/resources/static/css/styles2.css
+++ b/src/main/resources/static/css/styles2.css
@@ -134,6 +134,7 @@ border-collapse: separate;
     position: fixed;
     top: 2%;
     left: 1%;
+    z-index: 1000;
 
 
 
@@ -148,6 +149,7 @@ position:fixed;
 
 top: 2%;
 left: 8%;
+z-index: 1000;
 
 
 }
@@ -155,6 +157,7 @@ left: 8%;
     position: fixed;
     top: 2%;
     right: 7%;
+    z-index: 1000;
 
 
 
@@ -169,6 +172,7 @@ position:fixed;
 
 top: 2%;
 right: 2%;
+z-index: 1000;
 
 
 
@@ -232,6 +236,45 @@ right: 2%;
 
 
 }
+
+#outer{
+width:100%
+text-align: center;
+
+}
+#inner{
+width:50%;
+
+}
+#avg{
+    font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;
+    font-size: 14px;
+    font-style: large;
+}
+.center{
+    margin: auto;
+    width: 70%;
+    border: 3px dashed white:;
+    padding: 10px;
+    text-align: center;
+    font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;
+    font-size: 20px;
+    font-style: large;
+
+
+
+
+}
+.center1{
+   text-align: center;
+    font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;
+     font-size: 15px;
+     font-style: large;
+
+
+
+}
+
 
 
 
