--- a/src/main/resources/templates/classList.html
+++ b/src/main/resources/templates/classList.html
@@ -125,18 +125,20 @@
 </div>
 
 <!-- Email settings -->
-<div> <!-- Trigger the modal with a button -->
-    <button type="button" id="classes" class="btn btn-default btn-lg"  ng-click="getCurrentEmailInfo()" data-toggle="modal" data-target="#myModalsEmail">Edit Email Settings</button>
+<div class="notnice1"> <!-- Trigger the modal with a button -->
+    <button type="button" id="classes" class="btn btn-default btn-lg nice1"  ng-click="getCurrentEmailInfo()" data-toggle="modal" data-target="#myModalsEmail">Edit Email Settings</button>
 
     <!-- Modal -->
-    <div class="modal fade" id="myModalsEmail" role="dialog">
+    <div class="modal fade " id="myModalsEmail" role="dialog">
         <div class="modal-dialog">
 
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <font>
                     <h4 class="modal-title">Edit Email Settings</h4>
+                    </font>
                 </div>
                 <div class="modal-body">
                     <div style="text-align: left">
