--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -305,7 +305,7 @@
 
 
                 <td ng-repeat="i in getNumberOfAssignments(numberOfAssignments) track by $index"> <button type="button" class="btn btn-default btn-md" ng-click="addGrades(allAssignments[$index], gradebookContainer.studentContainers)" value="Send grades">
-                    <span class = "glyphicon glyphicon-send"> Update Grades </span>
+                    <span class = "glyphicon glyphicon-send"> Update-Grades </span>
                 </button>
                 </td>
 
@@ -406,7 +406,7 @@ $(document).ready(function(){
 
 
 
-            <div class="dropdown" id="dropdowns" style="display: inline-block">
+            <div class="dropdown" style="display: inline-block">
 
                 <div id="gb">
             <button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown">Choose Assignment
@@ -418,9 +418,11 @@ $(document).ready(function(){
 
                 </span>
             </ul>
+                    </div>
+                </div>
 
-
-
+        <div class="center">
+            <div>
 
                     <button href="#" title="More Info" data-toggle="popover" data-trigger="hover" data-content="Computes the difference of highest grade and 100, and adds the difference to each grade." class="btn btn-default btn-md" ng-click="curveFlat(assforgraph, gradebookContainer.studentContainers)" value="Flat curve">
                         Flat Curve
@@ -436,7 +438,8 @@ $(document).ready(function(){
         <button href="#" title="More Info" data-toggle="popover" data-trigger="hover" data-content="Replaces each grade with its sq. root multiplied by ten." class="btn btn-default btn-md"  ng-click="curveByTakingRoot(assforgraph, gradebookContainer.studentContainers)" value="Square root curve">
             Square Root Curve
         </button>
-            Extra credit: <input type="number"  ng-model="extraCreditAmount" placeholder="# points"/> <input type="button" class="btn btn-default btn-md"  ng-click="addExtraCredit(extraCreditAmount, assforgraph, gradebookContainer.studentContainers)" value="Add extra credit"/>
+                <font class="center1">
+            Extra credit: </font> <input type="number"  ng-model="extraCreditAmount" placeholder="# points"/> <input type="button" class="btn btn-default btn-md"  ng-click="addExtraCredit(extraCreditAmount, assforgraph, gradebookContainer.studentContainers)" value="Add extra credit"/>
 
             <button type="button" class="btn btn-default btn-md"  ng-click="getOriginalGrades(assforgraph)" value="Revert to original grades">
                 <span class = "glyphicon glyphicon-refresh"> Revert-Grades </span>
@@ -444,11 +447,10 @@ $(document).ready(function(){
                 </div>
 
 
+        <br>
+            Original average: {{ originalAverageForGraphView }} || Current average: {{ currentAverageForGraphView }}
+        </div>
 
-            </div>
-
-        Original average: {{ originalAverageForGraphView }}
-        Current average: {{ currentAverageForGraphView }}
 
 
     </section>
