--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+    function clearThis(target){
+        target.value= "";
+    }
+    </script>
     <link rel="stylesheet" type="text/css" href="../static/css/styles2.css">
     <link  rel="stylesheet" type="text/css" href="css/styles2.css">
     <link rel="alternate stylesheet" type="text/css" href="../static/css/styles3.css">
@@ -297,7 +302,7 @@
                     </div>
                     <span ng-if="gradebookContainer.studentContainers[0] != undefined">
                         <input type="button" class="btn btn-link btn-md" ng-click="sendEmailForAllZeros()" value="Email all with missing assignments"/>
-                        <input type="button" class="btn btn-link btn-md" ng-click="sendEmailForAllHighAverages()" value="Email all with averages over 95"/>
+                        <input type="button" class="btn btn-link btn-md" ng-click="sendEmailForAllHighAverages()" value="Email all with averages over {{highAverage}}"/>
                     </span>
                 </td>
 
@@ -330,8 +335,13 @@
             </tr>
 
             <tr>
+
                 <td> </td>
-                <td ng-repeat="i in getNumberOfAssignments(numberOfAssignments) track by $index"> Extra credit: <input type="number"  ng-model="extraCreditAmount" placeholder="# points"/> <input type="button" class="btn btn-default btn-md"  ng-click="addExtraCredit(extraCreditAmount, allAssignments[$index], gradebookContainer.studentContainers)" value="Add extra credit"/> </td>
+
+                <td ng-repeat="i in getNumberOfAssignments(numberOfAssignments) track by $index"> Extra credit: <input type="number" onfocus="clearThis(this)" ng-model="extraCreditAmount" placeholder="# points"/> <input type="button" class="btn btn-default btn-md"  ng-click="addExtraCredit(extraCreditAmount, allAssignments[$index], gradebookContainer.studentContainers)" value="Add extra credit"/>
+
+                </td>
+
             </tr>
 
             <tr>
@@ -439,9 +449,11 @@ $(document).ready(function(){
             Square Root Curve
         </button>
                 <font class="center1">
-            Extra credit: </font> <input type="number"  ng-model="extraCreditAmount" placeholder="# points"/> <input type="button" class="btn btn-default btn-md"  ng-click="addExtraCredit(extraCreditAmount, assforgraph, gradebookContainer.studentContainers)" value="Add extra credit"/>
+            Extra credit:  <input type="number" onfocus="clearThis(this)"  ng-model="extraCreditAmount" placeholder="# points"/> <input type="button" class="btn btn-default btn-md"  ng-click="addExtraCredit(extraCreditAmount, assforgraph, gradebookContainer.studentContainers)" value="Add extra credit"/>
+                </font>
 
-            <button type="button" class="btn btn-default btn-md"  ng-click="getOriginalGrades(assforgraph)" value="Revert to original grades">
+
+                <button type="button" class="btn btn-default btn-md"  ng-click="getOriginalGrades(assforgraph)" value="Revert to original grades">
                 <span class = "glyphicon glyphicon-refresh"> Revert-Grades </span>
             </button>
                 </div>
