fixed for presentation

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,5 +1,6 @@
 .nice{
- font-family: "The Girl Next Door";
+font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+
 
 
 
@@ -13,7 +14,7 @@
 
  }
  .nice1{
- font-family: "The Girl Next Door";
+font-family: Futura, "Trebuchet MS", Arial, sans-serif;
 
 
 
