--- a/src/main/resources/static/css/styles2.css
+++ b/src/main/resources/static/css/styles2.css
@@ -56,7 +56,7 @@ table, th, td {
 table{
 
 border-collapse: separate;
-    <!--empty-cells: hide;-->
+    empty-cells: hide;
   	font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;
 	font-size: 14px;
 	font-style: large;
@@ -167,17 +167,42 @@ z-index: 1000;
 }
 #logout1{
 
-position:fixed;
+ position:fixed;
 
 
-top: 2%;
-right: 2%;
-z-index: 1000;
+ top: 2%;
+ right: 2%;
+ z-index: 1000;
 
 
 
 
-}
+ }
+ #ass{
+
+ position:fixed;
+
+
+ text-align:center;
+ z-index: 1000;
+ border: 4px solid #f2f2f3;
+ background-color: #f2f2f3;
+ font-size: 14px;
+
+
+
+
+ }
+
+ .form-control{
+  font-size: 20px;
+  background-color: white;
+  color: black;
+  text-align:center;
+  font-weight: bold;
+
+
+ }
 
 
 
@@ -254,7 +279,7 @@ width:50%;
 .center{
     margin: auto;
     width: 70%;
-    border: 3px dashed white:;
+    border: 3px dashed white;
     padding: 10px;
     text-align: center;
     font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;
