--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -145,10 +145,16 @@
 
 
         <table class="table table-bordered">
-            <tr>
-                <td>
+
+
+
                     <div ng-if="gradebookContainer.studentContainers[0] != undefined">
-                    <button name="but" type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">Add Assignment</button>
+
+
+
+                    <button name="but" type="button" class="btn btn-default btn-md" data-toggle="modal" data-target="#myModal">Add Assignment</button>
+                        <input type="button" class="btn btn-default btn-md" ng-click="sendEmailForAllZeros()" value="Email all with missing assignments"/>
+                        <input type="button" class="btn btn-default btn-md" ng-click="sendEmailForAllHighAverages()" value="Email all with averages over {{highAverage}}"/>
 
                     <!-- Modal -->
                     <div class="modal fade" id="myModal" role="dialog">
@@ -181,23 +187,31 @@
                             </div>
                         </div>
 
-                    </div>
+
+
                     </div>
 
-                </td>
-            </tr>
+
+
+
+                    </div>
+
+
+
             <tr>
                 <td></td>
-                <td ng-repeat="currentAssignment in allAssignments"> {{currentAssignment.name}}, due {{currentAssignment.dueDate}}
-                    <div>
-                        <button type="button" class="btn btn-default btn-sm"  ng-click="showGraph(currentAssignment)" value="Show graph!">
-                            <span class="glyphicon glyphicon-signal" > </span> Graph
-                        </button>
-                        <button type="button" class="btn btn-default btn-sm" ng-click="deleteAssignment(currentAssignment)" value="Delete">
-                            <span class="glyphicon glyphicon-trash" > </span> <font color="red"> Delete </font>
-                        </button>
-                    <button type="button" class="btn btn-default btn-xs" ng-click="hideGraph()" value="hide graph!"> Hide Graph </button>
-                    </div>
+                <td ng-repeat="currentAssignment in allAssignments">
+
+                    {{currentAssignment.name}}, due {{currentAssignment.dueDate}}
+                    <!--<div>-->
+                        <!--<button type="button" class="btn btn-default btn-sm"  ng-click="showGraph(currentAssignment)" value="Show graph!">-->
+                            <!--<span class="glyphicon glyphicon-signal" > </span> Graph-->
+                        <!--</button>-->
+                        <!--<button type="button" class="btn btn-default btn-sm" ng-click="deleteAssignment(currentAssignment)" value="Delete">-->
+                            <!--<span class="glyphicon glyphicon-trash" > </span> <font color="red"> Delete </font>-->
+                        <!--</button>-->
+                    <!--<button type="button" class="btn btn-default btn-xs" ng-click="hideGraph()" value="hide graph!"> Hide Graph </button>-->
+                    <!--</div>-->
                 </td>
 
             </tr>
@@ -261,7 +275,7 @@
                     </div>
                 </td>
 
-                <td ng-repeat="studentAssignment in studentContainer.studentAssignments"> <input type="number" style="width: 45px" ng-model="studentAssignment.grade" ng-keyup="storeGrades"> </td>
+                <td ng-repeat="studentAssignment in studentContainer.studentAssignments"> <input class="form-control" style="width:80px;" type="number"  ng-model="studentAssignment.grade" ng-keyup="storeGrades"/> </td>
             </tr>
 
             <!--<tr>-->
@@ -301,10 +315,6 @@
 
                     </div>
                     <br><br>
-                    <span ng-if="gradebookContainer.studentContainers[0] != undefined">
-                        <input type="button" class="btn btn-default btn-md" ng-click="sendEmailForAllZeros()" value="Email all with missing assignments"/>
-                        <input type="button" class="btn btn-default btn-md" ng-click="sendEmailForAllHighAverages()" value="Email all with averages over {{highAverage}}"/>
-                    </span>
                 </td>
 
 
