--- a/src/main/resources/static/css/styles2.css
+++ b/src/main/resources/static/css/styles2.css
@@ -131,10 +131,10 @@ border-collapse: separate;
 
 
 #dropdown{
-    position: fixed;
-    top: 2%;
-    left: 1%;
-    z-index: 1000;
+   position: fixed;
+   top: 2%;
+   right: 7%;
+   z-index: 1000;
 
 
 
@@ -147,9 +147,11 @@ border-collapse: separate;
 position:fixed;
 
 
-top: 2%;
-left: 8%;
-z-index: 1000;
+ position:fixed;
+
+ top: 2%;
+ right: 2%;
+ z-index: 1000;
 
 
 }
@@ -193,6 +195,15 @@ z-index: 1000;
 
 
  }
+ .wrapper{
+     position: absolute;
+     top : 200px;
+     left: 300px;
+     width: 300px;
+     height:300px;
+
+
+ }
 
  .form-control{
   font-size: 20px;
@@ -200,6 +211,9 @@ z-index: 1000;
   color: black;
   text-align:center;
   font-weight: bold;
+   position: relative;
+   display: block;
+   margin : 0 auto;
 
 
  }
