trash taken out

--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -210,7 +210,7 @@
                         <!--<button type="button" class="btn btn-default btn-sm"  ng-click="showGraph(currentAssignment)" value="Show graph!">-->
                             <!--<span class="glyphicon glyphicon-signal" > </span> Graph-->
                         <!--</button>-->
-                        <button  class="glyphicon glyphicon-trash" ng-click="deleteAssignment(currentAssignment)" value="Delete">
+                        <button  class="btn-link glyphicon glyphicon-trash" ng-click="deleteAssignment(currentAssignment)" value="Delete">
                         </button>
                     <!--<button type="button" class="btn btn-default btn-xs" ng-click="hideGraph()" value="hide graph!"> Hide Graph </button>-->
                     <!--</div>-->
