--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -345,7 +345,7 @@ $(document).ready(function(){
                 <td> </td>
 
                 <!--<td ng-repeat="assignmentAndAverageContainer in gradebookContainer.assignmentAndAverageContainers"> Average: {{assignmentAndAverageContainer.average}} </td>-->
-                <td ng-repeat="average in assignmentAveragesContainerArray track by $index"> <span style="color: gray"> Uncurved average: {{average.originalAverage}} </span> <br/> Current average: {{average.currentAverage}}
+                <td ng-repeat="average in assignmentAveragesContainerArray track by $index"> <span style="color: gray"> Uncurved average: {{average.originalAverage}} </span> <br/> Current average: {{average.currentAverage}} <br>
                     <button type="button" class="btn btn-default btn-md"  ng-click="getOriginalGrades(allAssignments[$index])" value="Revert to original grades">
                         <span class = "glyphicon glyphicon-refresh"> Revert-Grades </span>
                     </button>
@@ -532,6 +532,7 @@ $(document).ready(function(){
             <button type="button" class="btn btn-default btn-md"  ng-click="curveByTakingRoot(assforgraph, gradebookContainer.studentContainers)" value="Square root curve">
                 Square Root Curve
             </button>
+
             <button type="button" class="btn btn-default btn-md"  ng-click="getOriginalGrades(assforgraph)" value="Revert to original grades">
                 <span class = "glyphicon glyphicon-refresh"> Revert-Grades </span>
             </button>
