--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -328,11 +328,13 @@ $(document).ready(function(){
 
 
 
-                <td ng-repeat="i in getNumberOfAssignments(numberOfAssignments) track by $index"> <button type="button" class="btn btn-default btn-md" ng-click="addGrades(allAssignments[$index], gradebookContainer.studentContainers)" value="Send grades">
-                    <span class = "glyphicon glyphicon-send"> Update-Grades </span>
-                </button>
+                <td ng-repeat="i in getNumberOfAssignments(numberOfAssignments) track by $index">
+                    <div class="cInput">
+                    <button type="button" class="btn btn-default btn-md" ng-click="addGrades(allAssignments[$index], gradebookContainer.studentContainers)" value="Send grades">
+                        <span class = "glyphicon glyphicon-send"> Update-Grades </span>
+                    </button>
+                    </div>
                 </td>
-
             </tr>
 
             <!--<tr>-->
@@ -344,13 +346,20 @@ $(document).ready(function(){
             <tr>
                 <td> </td>
 
+
                 <!--<td ng-repeat="assignmentAndAverageContainer in gradebookContainer.assignmentAndAverageContainers"> Average: {{assignmentAndAverageContainer.average}} </td>-->
-                <td ng-repeat="average in assignmentAveragesContainerArray track by $index"> <span style="color: gray"> Uncurved average: {{average.originalAverage}} </span> <br/> Current average: {{average.currentAverage}} <br>
+                <td ng-repeat="average in assignmentAveragesContainerArray track by $index">
+                    <div class="cInput">
+                    <span style="color: gray"> Uncurved average: {{average.originalAverage}} </span>
+                    <br/> Current average: {{average.currentAverage}} <br>
+
+
                     <button type="button" class="btn btn-default btn-md"  ng-click="getOriginalGrades(allAssignments[$index])" value="Revert to original grades">
                         <span class = "glyphicon glyphicon-refresh"> Revert-Grades </span>
                     </button>
-
+                    </div>
                 </td>
+
             </tr>
 
             <tr>
@@ -358,8 +367,9 @@ $(document).ready(function(){
                 <td> </td>
 
                 <td  ng-repeat="i in getNumberOfAssignments(numberOfAssignments) track by $index">
+                    <div class="cInput">
                      Extra credit: <input type="number" ng-model="extraCreditAmount" placeholder="# points"/>  <input type="button" class="btn btn-default btn-md"  ng-click="addExtraCredit(extraCreditAmount, allAssignments[$index], gradebookContainer.studentContainers)" value="Add extra credit"/>
-
+                    </div>
                 </td>
 
             </tr>
@@ -368,9 +378,10 @@ $(document).ready(function(){
                 <td> </td>
                 <div>
                 <td ng-repeat="i in getNumberOfAssignments(numberOfAssignments) track by $index">
+                    <div class="cInput">
                     <button href="#" title="More Info" data-toggle="popover" data-trigger="hover" data-content="Computes the difference of highest grade and 100, and adds the difference to each grade." class="btn btn-default btn-md" ng-click="curveFlat(allAssignments[$index], gradebookContainer.studentContainers)" value="Flat curve">
                        Flat Curve
-                    </button>
+                    </button> <br/>
 
                     <script>
 $(document).ready(function(){
@@ -383,16 +394,16 @@ $(document).ready(function(){
 
                     <button href="#" title="More Info" data-toggle="popover" data-trigger="hover" data-content="Sets the highest to 100%, and calculates all other grades as percentage of the highest grade." class="btn btn-default btn-md" ng-click="curveAsPercentageOfHighestGrade(allAssignments[$index], gradebookContainer.studentContainers)" value="Percentage of highest curve">
                         Percent of Highest Curve
-                    </button>
+                    </button> <br/>
 
 
 
                     <button href="#" title="More Info" data-toggle="popover" data-trigger="hover" data-content="Replaces each grade with its sq. root multiplied by ten." class="btn btn-default btn-md"  ng-click="curveByTakingRoot(allAssignments[$index], gradebookContainer.studentContainers)" value="Square root curve">
                         Square Root Curve
-                    </button>
-
+                    </button> <br/>
+                    </div>
                 </td>
-
+            </div>
             </tr>
             <tr>
                 <td>
