--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -201,8 +201,9 @@
             <tr>
                 <td></td>
                 <td ng-repeat="currentAssignment in allAssignments">
-
+                    <font size="4px">
                     {{currentAssignment.name}}
+                    </font>
                     <br>
                    <font color="grey"> due {{currentAssignment.dueDate}} </font>
 
