Revert to original email signature

--- a/src/main/resources/templates/classList.html
+++ b/src/main/resources/templates/classList.html
@@ -158,6 +158,8 @@
                         <form valign="top">
                             Set a new email signature: <input id="textfield2" type="text" class="form-control" ng-model="newEmailSignature"/>
                             <input type="button" class="btn btn-info" ng-click="setNewEmailSignature(newEmailSignature)" value="Change"/>
+                            <input type="button" class="btn btn-info" ng-click="resetEmailSignature()" value="Reset to default"/>
+                            <br/>
                             <input class="btn btn-link sm" type="reset" value="Reset">
 
                             <!--<input class="btn btn-default" type="reset" value="Reset">-->
